fix preview image alignment

--- a/examples/js-plugin/src/style.css
+++ b/examples/js-plugin/src/style.css
@@ -12,6 +12,7 @@
   vertical-align: top;
   width: 50%;
   height: 400px;
+  background-color: #f8f9fa;
 }
 
 .image-container img {
